trying some stuff to fix the size on mobile

--- a/Constellations/cssTest/memory/memory.css
+++ b/Constellations/cssTest/memory/memory.css
@@ -59,8 +59,8 @@ section{
     section{
         height: 100%;
         flex-wrap: wrap;
-        gap: 2%;
-        padding: 2%;
+        gap: 10px;
+        padding: 10px;
     }
  
 
@@ -68,6 +68,8 @@ section{
      width: 150px;
      max-height: 200px;
  }
+
+
 
 
 
